crates/formatter/tests/snapshots/snapshots__coder__migrations__000145_user_status_default_dormant.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table users alter column status set default 'dormant'::user_status;
