crates/formatter/tests/snapshots/snapshots__coder__migrations__000146_proxy_derp_only.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_proxies drop column derp_only;
