crates/formatter/tests/snapshots/snapshots__coder__migrations__000147_group_display_name.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table groups drop column display_name;
