crates/formatter/tests/snapshots/snapshots__coder__migrations__000148_group_source.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table groups drop column source;

drop type group_source;
