crates/formatter/tests/snapshots/snapshots__coder__migrations__000151_rename_locked.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table templates rename column time_til_dormant to inactivity_ttl;
alter table templates rename column time_til_dormant_autodelete to locked_ttl;
alter table workspaces rename column dormant_at to locked_at;

-- Update the template_with_users view;
drop view template_with_users;
-- If you need to update this view, put 'DROP VIEW template_with_users;' before this.
create view template_with_users as
select
	templates.*,
	coalesce(visible_users.avatar_url, '') as created_by_avatar_url,
	coalesce(visible_users.username, '') as created_by_username
from templates
	left join visible_users on templates.created_by = visible_users.id;

comment on view template_with_users is 'Joins in the username + avatar url of the created by user.';
