crates/formatter/tests/snapshots/snapshots__coder__migrations__000153_agent_default_apps.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type display_app as enum (
	'vscode',
	'vscode_insiders',
	'web_terminal',
	'ssh_helper',
	'port_forwarding_helper'
);
alter table workspace_agents
	add column display_apps display_app[]
		default '{vscode, vscode_insiders, web_terminal, ssh_helper, port_forwarding_helper}';
