crates/formatter/tests/snapshots/snapshots__coder__migrations__000154_dbcrypt_key_ids.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Before dropping this table, we need to check if there exist any
-- foreign key references to it. We do this by checking the following:
-- user_links.oauth_access_token_key_id
-- user_links.oauth_refresh_token_key_id
-- git_auth_links.oauth_access_token_key_id
-- git_auth_links.oauth_refresh_token_key_id
do $$
begin
	if exists (
		select *
		from user_links
		where
			oauth_access_token_key_id is not null
			or oauth_refresh_token_key_id is not null
	) then
		raise exception 'Cannot drop dbcrypt_keys table as there are still foreign key references to it from user_links.';
	end if;

	if exists (
		select *
		from git_auth_links
		where
			oauth_access_token_key_id is not null
			or oauth_refresh_token_key_id is not null
	) then
		raise exception 'Cannot drop dbcrypt_keys table as there are still foreign key references to it from git_auth_links.';
	end if;
end
$$;


-- Drop the columns first.
alter table git_auth_links
	drop column if exists oauth_access_token_key_id,
	drop column if exists oauth_refresh_token_key_id;

alter table user_links
	drop column if exists oauth_access_token_key_id,
	drop column if exists oauth_refresh_token_key_id;

-- Finally, drop the table.
drop table if exists dbcrypt_keys;
